Implement refresh endpoint, rework jwt token configuration
