# apps/chatstreet-backend/src/type-guards/libs/token/refresh.response.type-guard.ts
@@ -1,0 +1,10 @@
+import { z } from 'zod';
+
+export const RefreshResponseTypeGuard = z.object({
+  username: z.string(),
+  tag: z.number().min(1000).max(9999),
+  email: z.string().email(),
+  role: z.enum(['USER', 'ADMIN', 'SUPER_ADMIN']),
+});
+
+export type RefreshResponseType = z.infer<typeof RefreshResponseTypeGuard>;
